fix(cookie banner): button text alignment on small screens

--- a/src/assets/css/utils/_silktide-consent-manager.scss
+++ b/src/assets/css/utils/_silktide-consent-manager.scss
@@ -75,6 +75,8 @@ General Styles
 -------------------------------- */
 #stcm-wrapper .btn-primary {
   font-size: 1rem;
+  text-align: left;
+  align-self: flex-start;
 }
 
 #stcm-wrapper .stcm-button-secondary {
